--- a/pom.xml
+++ b/pom.xml
@@ -17,5 +17,11 @@
   		<version>3.1.0</version>
   		<scope>provided</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>javax.servlet</groupId>
+  		<artifactId>jsp-api</artifactId>
+  		<version>2.0</version>
+  		<scope>provided</scope>
+  	</dependency>
   </dependencies>
 </project>
